--- a/index.html
+++ b/index.html
@@ -8,16 +8,34 @@
   <title>stop bro</title>
 </head>
 <body>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+   
 </body>
+<div id="tes">
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dQw4w9WgXcQ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<div class="test">
+    <a onclick="discord1()">Github</a>
+</div>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
     body {
         background: bisque;
-        justify-content: center;
-        display: flex;
-        margin-top: 100px;
     } 
+    .test {
+        margin: 40px;
+        font-size: 30px;
+        text-align: center;
+        cursor: pointer;
+    }
+    #tes {
+        margin-top: 100px;
+        text-align: center;
+    }
 </style>
+<script>
+    function discord1() {
+        alert("https://github.com/Zeor154/bro this github")
+    }
+</script>
 </html>
