--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://c.tenor.com/x8v1oNUOmg4AAAAd/rickroll-roll.gif">
   <title>stop bro</title>
+  <meta property="og:site_name" content="https://lol.zrxy.ml">
+  <meta name="og:title" content="no">
+  <meta name="og:description" content="What is website simply ??">
+  <meta name="og:image" content="https://c.tenor.com/x8v1oNUOmg4AAAAd/rickroll-roll.gif">
+  <meta name="theme-color" content="#7289DA">
 </head>
 <body>
    
