--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
     <div class="container">
- <p style='display: flex; justify-content: center; '>Welcome to simply website???</p>
+ <p style='display: flex; justify-content: center; '>Contact me demo</p>
     <div class="btn-github"> 
         <a onclick="github()">Github
             <i class="fab fa-github" aria-hidden="true" ::before></i>
@@ -46,8 +46,9 @@
             background-color: #fff;
             display: flex;
             border-radius: 0.4rem;
-            padding: 1.4rem 2.4rem;
+            padding: 1.4rem 1.9rem;
             align-items: center;
+            margin-top: 80px;
         }
     .container p {
         font-family: 'RoBoto';
@@ -59,12 +60,13 @@
         background: #4f53ff;
         font-size: 15px;
         padding: 1.1rem 1.4rem;
-        border-radius: 40px;
+        border-radius: 30px;
         transition: ease-out 0.5s;
         cursor: pointer;
         color: white;
         box-shadow: 10px 10px 20px 20px rgba(79, 83, 255, 0.18);
-    }
+        transform: translate(0px, -151px);
+        }
     .container .btn-discord:hover {
     background: #121212;
     box-shadow: 2px 2px 8px 4px rgba(238, 32, 32, 0.16);
@@ -80,6 +82,7 @@
         cursor: pointer;
         color: white;
         box-shadow: 10px 10px 20px 20px rgba(23, 23, 23, 0.22);
+        transform: translate(-5px, -83px);
     }
     .container .btn-github:hover {
         background: #121212;
