--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <i class="fab fa-discord" aria-hidden="true"></i>
             </a>
     </div>
+<p class="footer">Copyright © 2021</p>
     </div>
 </body>
 <style>
@@ -87,6 +88,11 @@
     .container .btn-github:hover {
         background: #121212;
         box-shadow: 2px 2px 8px 4px rgba(0, 255, 110, 0.16);
+    }
+    .container .footer{
+        text-align: right;
+        font-family: 'RoBoto';
+        font-size: 15px;
     }
 </style>
 <script>
