--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
             padding: 1.4rem 1.9rem;
             align-items: center;
             margin-top: 80px;
+            position: absolute;
         }
     .container p {
         font-family: 'RoBoto';
