--- a/index.html
+++ b/index.html
@@ -118,6 +118,11 @@
         
     }
 </script>
+<script>
+   const con = document.querySelector('.container')
+   const tl = new TimelineMax()
+   tl.fromto(container, 1, { height: "0%"}, {height: "80%", ease: Power2.easeInOut})
+</script> 
 <script>alert('Welcome to website')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
