--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
     body {
-        background: bisque;
+        background-image: url('https://media.discordapp.net/attachments/924146518758424607/925664780230996018/des.PNG');
         display: flex;
         justify-content: center;
         }
@@ -118,11 +118,6 @@
         
     }
 </script>
-<script>
-   const con = document.querySelector('.container')
-   const tl = new TimelineMax()
-   tl.fromto(container, 1, { height: "0%"}, {height: "80%", ease: Power2.easeInOut})
-</script> 
 <script>alert('Welcome to website')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
