--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
             border-radius: 0.4rem;
             padding: 1.4rem 1.9rem;
             align-items: center;
-            margin-top: 80px;
+            margin-top: 50px;
             position: absolute;
+            border: 2px solid orange;
         }
     .container p {
         font-family: 'RoBoto';
