--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
     <div class="container">
  <p style='display: flex; justify-content: center; '>Contact me demo</p>
     <div class="btn-github"> 
-        <a onclick="github()">Github
+        <a onclick="github()">
             <i class="fab fa-github" aria-hidden="true" ::before></i>
             </a>
     </div>
 
     <div class="btn-discord"> 
-        <a onclick="discord1()">Discord
+        <a onclick="discord1()">
             <i class="fab fa-discord" aria-hidden="true"></i>
             </a>
     </div>
