--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"class="item title">Site</a>
         </div>
         <div class="group">
-          <a href="index.html"class="item">Home</a>
-          <a href="contact.html"class="item">Contact</a>
+          <a href="index"class="item">Home</a>
+          <a href="contact"class="item">Contact</a>
         </div>
       </nav>
     <div class="container">
