--- a/contact.html
+++ b/contact.html
@@ -23,8 +23,8 @@
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"class="item title">Site</a>
         </div>
         <div class="group">
-          <a href="index"class="item">Home</a>
-          <a href="contact"class="item">Contact</a>
+          <a href="index.html"class="item">Home</a>
+          <a href="contact.html"class="item">Contact</a>
         </div>
       </nav>
     <div class="container">
@@ -153,6 +153,6 @@
         
     }
 </script>
-<script>alert('Welcome to website')</script>
+<script>alert('Welcome to contact')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
