--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       font-size: 20px;
     }
     .menu-bar {
-  background-color: #1988f7;
+  background-color: #FE8D8D;
   display: flex;
   justify-content: flex-start;
   box-sizing: border-box;
