--- a/contact.html
+++ b/contact.html
@@ -47,7 +47,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
     .menu-bar {
-  background-color: #1988f7;
+  background-color: #FE8D8D;
   display: flex;
   justify-content: flex-start;
   box-sizing: border-box;
