--- a/index.html
+++ b/index.html
@@ -17,9 +17,6 @@
     <meta property="og:site_name" content="zeor154.github.io/bro">
     <link rel="icon" href="https://cdn.discordapp.com/attachments/924146518758424607/925664780230996018/des.PNG">
 </head>
-  <div class="loading">
-   <p>Loading</p>
-   </div>
     <nav class="menu-bar">
         <div class="group">
           <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"class="item title">Site</a>
@@ -146,6 +143,13 @@
         .about .about-des{
           font-family: 'RoBoto';
         }
+        .container .txt{
+       font-family: 'RoBoto';
+       font-size: 25px;
+       }
+       .container .footer{
+       font-family: 'RoBoto';
+       }
 </style>
 <script>
   let valueDisplays = document.querySelectorAll(".num");
@@ -163,11 +167,6 @@ valueDisplays.forEach((valueDisplay) => {
     }
   }, duration);
 });
-</script>
-<script>
-  $(window).on('load',function(){
-   $('.loading').faceOut(1000);
-})
 </script>
 <script>alert('Welcome to website')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
