--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       <p class="about-txt">My About
         <i class="fab fa-discord"></i>
       </p>
-      <p class="about-des">Name : Pound pong</p>
+      <p class="about-des">Name : Pang pound</p>
       <p class="about-des">Gender : Male</p>
       <p class="about-des">What i like : Code....</p>
     </div>
