--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   background-color: rgba(0, 0, 0, 0.1);
 }
     body {
-        background-color: #000000;
+        background-image: url('https://media.discordapp.net/attachments/924146518758424607/925664780230996018/des.PNG');
         display: flex;
         justify-content: center;
         }
