--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       </p>
       <p class="about-des">Name : Pang pound</p>
       <p class="about-des">Gender : Male</p>
-      <p class="about-des">What i like : Code....</p>
+      <p class="about-des">What i like : Code and game</p>
     </div>
     <div class="skill">
       <p class="title">My Skills</p>
