--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,31 @@
     </div>
 <p class="footer">Copyright © 2021</p>
     </div>
+    <div class="preloader">
+
+    </div>
 </body>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
+    .preloader{
+      background: black url('https://upload.wikimedia.org/wikipedia/commons/2/29/Loader.gif') no-repeat center center;
+      background-size: 40%;
+      height: 100vh;
+      width: 100%;
+      position: fixed;
+      z-index: 100%;
+     display: flex;
+     justify-content: center;
+     align-items: center;
+     animation: vanish 1.5s forwards;
+    }
+    @keyframes vanish{
+      100%{
+        opacity: 0;
+        visibility: hidden;
+      }
+    }
     .menu-bar {
   background-color: #FE8D8D;
   display: flex;
@@ -153,6 +174,5 @@
         
     }
 </script>
-<script>alert('Welcome to contact')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
