--- a/index.html
+++ b/index.html
@@ -46,14 +46,29 @@
       <div class="num" data-val="12000">000</div>
       <span>Counter</span>
     </div>
+    <div class="preloader">
+    </div>
 </body>
 <style>
     @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-    
-    .loading{
-     font-family: 'RoBoto';
+  
+    .preloader{
+      background: black url('https://upload.wikimedia.org/wikipedia/commons/2/29/Loader.gif') no-repeat center center;
+      background-size: 40%;
+      height: 100vh;
+      width: 100%;
+      position: fixed;
+      z-index: 100%;
      display: flex;
      justify-content: center;
+     align-items: center;
+     animation: vanish 1.5s forwards;
+    }
+    @keyframes vanish{
+      100%{
+        opacity: 0;
+        visibility: hidden;
+      }
     }
     .skill .title{
       font-size: 25px;
@@ -168,6 +183,5 @@ valueDisplays.forEach((valueDisplay) => {
   }, duration);
 });
 </script>
-<script>alert('Welcome to website')</script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
