--- a/index.html
+++ b/index.html
@@ -183,5 +183,6 @@ valueDisplays.forEach((valueDisplay) => {
   }, duration);
 });
 </script>
+<script>  document.cokkie = "Error=ไม่"  </script>
 <script src="https://kit.fontawesome.com/5acf4d9e80.js" crossorigin="anonymous"></script>
 </html>
