--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </nav>
     <div class="container">
         <p class="txt">My site</p>
-        <p class="footer">Copyright © 2021</p>
+        <p class="footer">Copyright © 2021-2022</p>
     </div>
     <div class="about">
       <p class="about-txt">My About
