--- a/contact.html
+++ b/contact.html
@@ -40,7 +40,7 @@
             <i class="fab fa-discord" aria-hidden="true"></i>
             </a>
     </div>
-<p class="footer">Copyright © 2021</p>
+<p class="footer">Copyright © 2021-2022</p>
     </div>
     <div class="preloader">
 
